// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ItemDetails /> should render additional components with new services 1`] = `
<Link
  className="css-sr2jsa theme__product-grid__item__item-details"
  href=""
  onClick={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div>
    <Swatches
      productId="1234"
    />
  </div>
  <div
    className="css-nfstwl"
  >
    <ItemName
      display={null}
      name="Foo"
      productId="1234"
    />
  </div>
  <div
    className="css-1mm725o"
  >
    <ShortDescription
      shortDescription={null}
    />
    <MapPriceHint
      productId="1234"
    />
    <OrderQuantityHint
      className="css-1s3c85m"
      productId="1234"
    />
    <EffectivityDates
      productId="1234"
    />
    <Availability
      showWhenAvailable={false}
      state="AVAILABILITY_STATE_OK"
      text="product.available.not"
    />
    <StockInfoLists
      product={
        Object {
          "id": "1234",
          "name": "Foo",
          "price": Object {},
        }
      }
    />
    <div
      className="css-193sdzn"
    >
      <ItemPrice
        display={null}
        product={
          Object {
            "id": "1234",
            "name": "Foo",
            "price": Object {},
          }
        }
      />
    </div>
  </div>
</Link>
`;

exports[`<ItemDetails /> should render with minimal props 1`] = `
<Link
  className="css-sr2jsa theme__product-grid__item__item-details"
  href=""
  onClick={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div>
    <Swatches
      productId="1234"
    />
  </div>
  <div
    className="css-nfstwl"
  >
    <ItemName
      display={null}
      name="Foo"
      productId="1234"
    />
  </div>
  <div
    className="css-1mm725o"
  >
    <ShortDescription
      shortDescription={null}
    />
    <MapPriceHint
      productId="1234"
    />
    <OrderQuantityHint
      className="css-1s3c85m"
      productId="1234"
    />
    <EffectivityDates
      productId="1234"
    />
    <div
      className="css-193sdzn"
    >
      <ItemPrice
        display={null}
        product={
          Object {
            "id": "1234",
            "name": "Foo",
            "price": Object {},
          }
        }
      />
    </div>
  </div>
</Link>
`;
